[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Interface.gd" type="Script" id=1]
[ext_resource path="res://Scripts/BottomMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/GUI/Panel/BottomPanel.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/Icons/Money.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Minecraft.tres" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/GUI/Icons/Population.png" type="Texture" id=6]
[ext_resource path="res://Scripts/SettingsMenu.gd" type="Script" id=7]
[ext_resource path="res://Assets/GUI/Panel/SettingsPanel.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/Buttons/Resume_Button.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/Buttons/Resume_Button_pressed.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/Buttons/Option_Button.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/Buttons/Option_Button_pressed.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI/Buttons/Button.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/Buttons/Button_pressed.png" type="Texture" id=14]
[ext_resource path="res://Scripts/DebugMenu.gd" type="Script" id=15]
[ext_resource path="res://Scripts/BuildMenu.gd" type="Script" id=16]
[ext_resource path="res://Assets/GUI/Panel/BuildMenuPanel.png" type="Texture" id=17]
[ext_resource path="res://Assets/GUI/BuildMenu/Test.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="GameGui" type="Control"]
script = ExtResource( 1 )

[node name="BottomMenu" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 600.0
rect_scale = Vector2( 1.00212, 1 )
script = ExtResource( 2 )

[node name="BottomPanel" type="TextureRect" parent="BottomMenu"]
margin_top = -36.0
margin_right = 1024.0
margin_bottom = -4.0
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="BottomMenu/BottomPanel"]
margin_left = 20.0
margin_top = 8.0
custom_constants/separation = 100

[node name="Finanzen" type="VBoxContainer" parent="BottomMenu/BottomPanel/HBoxContainer"]
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 150, 0 )
custom_constants/separation = 0
alignment = 1

[node name="Money" type="HBoxContainer" parent="BottomMenu/BottomPanel/HBoxContainer/Finanzen"]
margin_right = 150.0
margin_bottom = 19.0
custom_constants/separation = 0

[node name="DollarSign" type="TextureRect" parent="BottomMenu/BottomPanel/HBoxContainer/Finanzen/Money"]
margin_right = 16.0
margin_bottom = 19.0
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="BottomMenu/BottomPanel/HBoxContainer/Finanzen/Money"]
margin_left = 16.0
margin_right = 64.0
margin_bottom = 19.0
custom_constants/margin_top = 3

[node name="Money" type="Label" parent="BottomMenu/BottomPanel/HBoxContainer/Finanzen/Money/MarginContainer"]
margin_top = 3.0
margin_right = 48.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Money"

[node name="Population" type="VBoxContainer" parent="BottomMenu/BottomPanel/HBoxContainer"]
margin_left = 250.0
margin_right = 350.0
margin_bottom = 19.0
custom_constants/separation = 0
alignment = 1

[node name="Population" type="HBoxContainer" parent="BottomMenu/BottomPanel/HBoxContainer/Population"]
margin_right = 100.0
margin_bottom = 19.0

[node name="StocksSign" type="TextureRect" parent="BottomMenu/BottomPanel/HBoxContainer/Population/Population"]
margin_right = 16.0
margin_bottom = 19.0
texture = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="BottomMenu/BottomPanel/HBoxContainer/Population/Population"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 19.0
custom_constants/margin_top = 3

[node name="Population" type="Label" parent="BottomMenu/BottomPanel/HBoxContainer/Population/Population/MarginContainer"]
margin_top = 3.0
margin_right = 80.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Population"

[node name="SettingsMenu" type="Control" parent="."]
editor/display_folded = true
margin_left = 384.0
margin_top = 80.0
script = ExtResource( 7 )

[node name="SettingsMenuPanel" type="TextureRect" parent="SettingsMenu"]
rect_scale = Vector2( 1, 0.864527 )
texture = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/SettingsMenuPanel"]
margin_left = 22.0
margin_top = 22.0
size_flags_vertical = 3

[node name="Resume" type="TextureButton" parent="SettingsMenu/SettingsMenuPanel/VBoxContainer"]
margin_right = 212.0
margin_bottom = 48.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Options" type="TextureButton" parent="SettingsMenu/SettingsMenuPanel/VBoxContainer"]
margin_top = 52.0
margin_right = 212.0
margin_bottom = 100.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )

[node name="Exit" type="TextureButton" parent="SettingsMenu/SettingsMenuPanel/VBoxContainer"]
editor/display_folded = true
margin_top = 104.0
margin_right = 212.0
margin_bottom = 152.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )

[node name="Label" type="Label" parent="SettingsMenu/SettingsMenuPanel/VBoxContainer/Exit"]
margin_left = 9.0
margin_top = 5.91559
margin_right = 204.0
margin_bottom = 33.9156
custom_fonts/font = SubResource( 2 )
text = "Save and Exit"

[node name="DebugMenu" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 15 )

[node name="Panel" type="Panel" parent="DebugMenu"]
editor/display_folded = true
margin_left = 20.0
margin_top = 20.0
margin_right = 170.0
margin_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugMenu/Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Buildmode" type="Label" parent="DebugMenu/Panel/VBoxContainer"]
margin_right = 82.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "BuildMode: "

[node name="Coords" type="Label" parent="DebugMenu/Panel/VBoxContainer"]
margin_top = 20.0
margin_right = 82.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
text = "Coords: "

[node name="BuildMenu" type="Control" parent="."]
editor/display_folded = true
visible = false
script = ExtResource( 16 )

[node name="MarginContainer" type="MarginContainer" parent="BuildMenu"]
margin_top = -1.05263
margin_right = 1024.0
margin_bottom = 550.947
custom_constants/margin_right = 256
custom_constants/margin_top = 20
custom_constants/margin_left = 256
custom_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="BuildMenu/MarginContainer"]
margin_left = 256.0
margin_top = 20.0
margin_right = 768.0
margin_bottom = 532.0
texture = ExtResource( 17 )

[node name="Houses" type="MarginContainer" parent="BuildMenu/MarginContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="BuildMenu/MarginContainer/TextureRect/Houses"]
margin_left = 20.0
margin_top = 20.0
margin_right = 492.0
margin_bottom = 492.0
scroll_horizontal_enabled = false

[node name="Houses" type="GridContainer" parent="BuildMenu/MarginContainer/TextureRect/Houses/ScrollContainer"]
margin_right = 472.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="TextureButton" type="TextureButton" parent="BuildMenu/MarginContainer/TextureRect/Houses/ScrollContainer/Houses"]
margin_right = 113.0
margin_bottom = 200.0
texture_normal = ExtResource( 18 )

[node name="ColorRect" type="ColorRect" parent="BuildMenu/MarginContainer/TextureRect/Houses/ScrollContainer/Houses"]
margin_left = 123.0
margin_right = 236.0
margin_bottom = 200.0
rect_min_size = Vector2( 110, 200 )
size_flags_horizontal = 3

[node name="ColorRect2" type="ColorRect" parent="BuildMenu/MarginContainer/TextureRect/Houses/ScrollContainer/Houses"]
margin_left = 246.0
margin_right = 359.0
margin_bottom = 200.0
rect_min_size = Vector2( 110, 200 )
size_flags_horizontal = 3

[node name="ColorRect3" type="ColorRect" parent="BuildMenu/MarginContainer/TextureRect/Houses/ScrollContainer/Houses"]
margin_left = 369.0
margin_right = 482.0
margin_bottom = 200.0
rect_min_size = Vector2( 110, 200 )
size_flags_horizontal = 3

[node name="ColorRect4" type="ColorRect" parent="BuildMenu/MarginContainer/TextureRect/Houses/ScrollContainer/Houses"]
margin_top = 210.0
margin_right = 113.0
margin_bottom = 410.0
rect_min_size = Vector2( 110, 200 )
size_flags_horizontal = 3

[connection signal="pressed" from="SettingsMenu/SettingsMenuPanel/VBoxContainer/Resume" to="SettingsMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="SettingsMenu/SettingsMenuPanel/VBoxContainer/Options" to="SettingsMenu" method="_on_Options_pressed"]
[connection signal="pressed" from="SettingsMenu/SettingsMenuPanel/VBoxContainer/Exit" to="SettingsMenu" method="_on_Exit_pressed"]
[connection signal="pressed" from="BuildMenu/MarginContainer/TextureRect/Houses/ScrollContainer/Houses/TextureButton" to="BuildMenu" method="_on_TextureButton_pressed"]
